--- a/Changes
+++ b/Changes
@@ -1,4 +1,7 @@
 Revision history for POSIX-RT-Spawn
 
+0.02  Thu Jan 12 22:23:24 UTC 2012
+    - Fixed tests for Perl 5.8.
+
 0.01  Thu Jan 12 16:51:28 UTC 2012
     - Initial distribution.
