--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for POSIX-RT-Spawn
 
+0.03  Thu Jan 12 23:11:35 UTC 2012
+    - Stopped testing errno, except after expected failure.
+
 0.02  Thu Jan 12 22:23:24 UTC 2012
     - Fixed tests for Perl 5.8.
 
