Import of GRAY/POSIX-RT-Spawn-0.04 from CPAN.
gitpan-cpan-distribution: POSIX-RT-Spawn
gitpan-cpan-version:      0.04
gitpan-cpan-path:         GRAY/POSIX-RT-Spawn-0.04.tar.gz
gitpan-cpan-author:       GRAY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for POSIX-RT-Spawn
 
+0.04  Fri Jan 13 03:37:34 UTC 2012
+    - Fixed for threaded perls.
+
 0.03  Thu Jan 12 23:11:35 UTC 2012
     - Stopped testing errno, except after expected failure.
 
