Import of GRAY/POSIX-RT-Spawn-0.05 from CPAN.
gitpan-cpan-distribution: POSIX-RT-Spawn
gitpan-cpan-version:      0.05
gitpan-cpan-path:         GRAY/POSIX-RT-Spawn-0.05.tar.gz
gitpan-cpan-author:       GRAY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for POSIX-RT-Spawn
 
+0.05  Mon Jan 23 15:58:44 UTC 2012
+    - Added fix for glibc.
+
 0.04  Fri Jan 13 03:37:34 UTC 2012
     - Fixed for threaded perls.
 
