Import of GRAY/POSIX-RT-Spawn-0.10 from CPAN.
gitpan-cpan-distribution: POSIX-RT-Spawn
gitpan-cpan-version:      0.10
gitpan-cpan-path:         GRAY/POSIX-RT-Spawn-0.10.tar.gz
gitpan-cpan-author:       GRAY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for POSIX-RT-Spawn
 
+0.10  Wed Feb  8 07:17:17 UTC 2012
+    - Switched away from undocumented SvPVx_nolen, for compatiblity with
+      Perl < 5.8.9.
+
 0.09  Tue Feb  7 14:51:37 UTC 2012
     - my_strlcat is also needed for Perl < 5.8.9.
 
