Import of GRAY/POSIX-RT-Spawn-0.11 from CPAN.
gitpan-cpan-distribution: POSIX-RT-Spawn
gitpan-cpan-version:      0.11
gitpan-cpan-path:         GRAY/POSIX-RT-Spawn-0.11.tar.gz
gitpan-cpan-author:       GRAY
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for POSIX-RT-Spawn
 
+0.11  Thu Feb 16 22:16:02 UTC 2012
+    - Added missing semicolons to XS statements.
+    - Added ppport request to provide sv_2pv_flags function for Perl 5.6.2.
+
 0.10  Wed Feb  8 07:17:17 UTC 2012
     - Switched away from undocumented SvPVx_nolen, for compatiblity with
       Perl < 5.8.9.
